--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,4 @@ platform = atmelavr
 board = micro
 framework = arduino
 lib_deps = https://github.com/lathoub/Arduino-USBMIDI.git, https://github.com/FortySevenEffects/arduino_midi_library.git, https://github.com/adafruit/Adafruit-GFX-Library.git, https://github.com/adafruit/Adafruit_SSD1306.git, https://github.com/mprograms/SimpleRotary.git
+;lib_ldf_mode = chain.io 
