--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,13 @@
 platform = atmelavr
 board = micro
 framework = arduino
-lib_deps = https://github.com/lathoub/Arduino-USBMIDI.git, https://github.com/FortySevenEffects/arduino_midi_library.git, https://github.com/adafruit/Adafruit-GFX-Library.git, https://github.com/adafruit/Adafruit_SSD1306.git, https://github.com/mprograms/SimpleRotary.git
-;lib_ldf_mode = chain.io 
+lib_deps =
+    https://github.com/lathoub/Arduino-USBMIDI
+    MIDI Library
+    Adafruit GFX Library
+    Adafruit BusIO
+    Adafruit SSD1306
+    SimpleRotary
+    Wire
+    SPI
+;lib_ldf_mode = chain.io
